--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
         "@angular/platform-browser": "^10.1.0",
         "@angular/platform-browser-dynamic": "^10.1.0",
         "@angular/router": "^10.1.0",
+        "angular-font-awesome": "^3.1.2",
         "faker": "^5.5.0",
+        "font-awesome": "^4.7.0",
         "lodash": "^4.17.21",
         "rxjs": "^6.6.0",
         "tslib": "^2.0.0",
