--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@angular/platform-browser-dynamic": "^10.1.0",
         "@angular/router": "^10.1.0",
         "angular-font-awesome": "^3.1.2",
+        "angular-progress-bar": "^1.0.11",
         "faker": "^5.5.0",
         "font-awesome": "^4.7.0",
         "lodash": "^4.17.21",
