--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "faker": "^5.5.0",
         "font-awesome": "^4.7.0",
         "lodash": "^4.17.21",
+        "read-excel-file": "^5.1.0",
         "rxjs": "^6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "^0.10.2"
