--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
         "@angular/platform-browser-dynamic": "^10.1.0",
         "@angular/router": "^10.1.0",
         "angular-font-awesome": "^3.1.2",
+        "angular-notifier": "^9.0.1",
         "angular-progress-bar": "^1.0.11",
         "faker": "^5.5.0",
         "font-awesome": "^4.7.0",
         "lodash": "^4.17.21",
+        "notify-angular": "^3.0.1",
         "read-excel-file": "^5.1.0",
         "rxjs": "^6.6.0",
+        "sweetalert2": "^10.16.7",
         "tslib": "^2.0.0",
         "zone.js": "^0.10.2"
     },
