--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
         "angular-progress-bar": "^1.0.11",
         "faker": "^5.5.0",
         "font-awesome": "^4.7.0",
+        "google-translate-api": "^2.3.0",
+        "google-translate-open-api": "^1.3.7",
         "lodash": "^4.17.21",
+        "ngx-countdown": "^11.0.3",
         "notify-angular": "^3.0.1",
         "read-excel-file": "^5.1.0",
         "rxjs": "^6.6.0",
