--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^10.1.0",
+        "@angular/animations": "^10.2.5",
         "@angular/common": "^10.1.0",
         "@angular/compiler": "^10.1.0",
         "@angular/core": "^10.1.0",
@@ -19,6 +19,7 @@
         "@angular/platform-browser": "^10.1.0",
         "@angular/platform-browser-dynamic": "^10.1.0",
         "@angular/router": "^10.1.0",
+        "@microsoft/signalr": "^5.0.6",
         "angular-font-awesome": "^3.1.2",
         "angular-notifier": "^9.0.1",
         "angular-progress-bar": "^1.0.11",
@@ -28,6 +29,7 @@
         "google-translate-open-api": "^1.3.7",
         "lodash": "^4.17.21",
         "ngx-countdown": "^11.0.3",
+        "ngx-toastr": "^14.0.0",
         "notify-angular": "^3.0.1",
         "read-excel-file": "^5.1.0",
         "rxjs": "^6.6.0",
