--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "angular-font-awesome": "^3.1.2",
         "angular-notifier": "^9.0.1",
         "angular-progress-bar": "^1.0.11",
+        "devextreme": "^20.2.4",
+        "devextreme-angular": "^20.2.4",
         "faker": "^5.5.0",
         "font-awesome": "^4.7.0",
         "google-translate-api": "^2.3.0",
@@ -38,23 +40,25 @@
         "zone.js": "^0.10.2"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.1001.0",
-        "@angular/cli": "^10.1.0",
-        "@angular/compiler-cli": "^10.1.0",
-        "@types/jasmine": "^3.5.0",
-        "@types/jasminewd2": "^2.0.3",
-        "@types/node": "^12.11.1",
-        "codelyzer": "^6.0.0",
-        "jasmine-core": "^3.6.0",
+        "@angular-devkit/build-angular": "^0.1001.7",
+        "@angular/cli": "^10.2.3",
+        "@angular/compiler-cli": "^10.2.5",
+        "@types/jasmine": "^3.7.4",
+        "@types/jasminewd2": "^2.0.9",
+        "@types/node": "^12.20.13",
+        "codelyzer": "^6.0.2",
+        "devextreme-cli": "latest",
+        "devextreme-themebuilder": "^20.2.4",
+        "jasmine-core": "^3.7.1",
         "jasmine-spec-reporter": "^5.0.0",
-        "karma": "^5.0.0",
+        "karma": "^5.2.3",
         "karma-chrome-launcher": "^3.1.0",
         "karma-coverage-istanbul-reporter": "^3.0.2",
         "karma-jasmine": "^4.0.0",
-        "karma-jasmine-html-reporter": "^1.5.0",
+        "karma-jasmine-html-reporter": "^1.6.0",
         "protractor": "^7.0.0",
         "ts-node": "^8.3.0",
         "tslint": "^6.1.0",
-        "typescript": "^4.0.2"
+        "typescript": "^3.9.5"
     }
 }
