--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,9 +1,15 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "extends": "./tsconfig.base.json",
   "compilerOptions": {
     "outDir": "./out-tsc/app",
-    "types": []
+    "types": [],
+    "paths": {
+      "@app/*": ["src/app/*"],
+      "@environments/*": ["src/environments/*"],
+      "jszip": [
+        "node_modules/jszip/dist/jszip.min.js"
+      ],
+    }
   },
   "files": [
     "src/main.ts",
